--- a/t16/index.html
+++ b/t16/index.html
@@ -1,68 +1,35 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Title</title>-->
-<!--    <meta name="description" content="t17">-->
-<!--    <link rel="stylesheet" href="style.css">-->
-<!--</head>-->
-<!--<body>-->
-<!--    <h1>X-MEN</h1>-->
-<!--    <div class="all">-->
-<!--        <div class="menu">-->
-<!--            <button class="main-button button-background">TEAM</button>-->
-<!--            <div class="button-dropdown">-->
-<!--                <button class="button-2 but">LEADERS</button>-->
-<!--                <button class="button-3 but">MEMBERS</button>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="menu">-->
-<!--            <button class="main-button button-background">ENEMIES</button>-->
-<!--            <div class="button-dropdown">-->
-<!--                <button class="button-4 but">BROTHERHOOD OF MUTANT</button>-->
-<!--                <div class="button-dropedeown-second">-->
-<!--                    <button class="button-6 but">MAGNETO</button>-->
-<!--                    <button class="button-7 but">MYSTIQUE</button>-->
-<!--                    <button class="button-8 but">QUICKSILVER</button>-->
-<!--                </div>-->
-<!--                <button class="button-5 but">OTHERS</button>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</body>-->
-<!--</html>-->
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <meta name="description" content="t17">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Title</title>
+  <meta name="description" content="t17">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>X-MEN</h1>
-    <nav>
-        <ul class="list">
-            <li><a href="#" class="align">TEAM</a>
-                <ul class="dropedown">
-                    <li><a href="#">LEADERS</a></li>
-                    <li><a href="#">MEMBERS</a></li>
-                </ul>
-            </li>
+  <h1>ASSORTMENT</h1>
+  <nav>
+    <ul class="list1 list">
+      <li><a href="#" class="align">PEPSI</a>
+        <ul class="dropedown">
+          <li><a class="align href="#">MIRINDA</a></li>
+          <li><a class="align href="#">7 UP</a></li>
         </ul>
-        <ul class="list">
-            <li><a href="#" class="align">ENEMIES</a>
-                <ul class="dropedown">
-                    <li class="active"><a href="#">BROTHERHOOD OF MUTANTS</a>
-                        <ul class="privet">
-                            <li ><a href="#" class="zam">MAGNETO</li></a>
-                            <li><a href="#" class="zam">MYSTIQUE</li></a>
-                            <li><a href="#" class="zam">QUICKSILVER</li></a>
-                        </ul>
-                    </li>
-                    <li><a href="#">OTHERS</a></li>
-                </ul>
-            </li>
+      </li>
+    </ul>
+    <ul class="list2 list">
+      <li><a href="#" class="align">COCA-COLA</a>
+        <ul class="dropedown">
+          <li class="active align"><a href="#">FANTA</a>
+            <ul class="privet">
+              <li ><a href="#" class="zam">ORANGE</li></a>
+              <li><a href="#" class="zam">PINEAPPLE</li></a>
+              <li><a href="#" class="zam">MANGO</li></a>
+            </ul>
+          </li>
+          <li><a href="#" class="align">SPRITE</a></li>
         </ul>
-    </nav>
+      </li>
+    </ul>
+  </nav>
 </body>
 </html>
